# dpdk-forwarder

./: .dockerignore  .gitignore  Dockerfile  FUNC_SPEC.md  README.md  TASK.md  docker-compose.yml  meson.build  meson_options.txt  run_lab.sh
.github/workflows/: ci.yml
src/: config.c  config.h  flow.c  flow.h  log.h  main.c  port.c  port.h  stats.c  stats.h  worker.c  worker.h
tests/: gen_pcap.py  run_vdev.sh  test_flow.c  test_stats.c  verify_affinity.py
